# hackers.chimbosonic.com

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
public/: db.json  style.css
src/: db.json  index.html  main.rs
src/components/: gallery.rs  gif.rs  mod.rs
src/libs/: config.rs  data.rs  mod.rs  search.rs
utils/generate_db_json/: gen_db_json.py
